--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,14 +8,92 @@ body{
     padding: 8px;
 }
 
+body.light-mode{
+    background-color: rgb(237, 237, 237);
+    transition: .2s ease;
+}
+
+p{
+    color:white;
+    font-size: 13px;
+    padding:0;
+}
+
+.DocumentWrap{
+    display:flex;
+    flex-direction: column;
+}
+
+li{
+    text-decoration: none;
+    list-style-type: none;
+}
+
+li:hover{
+    color:rgb(49, 49, 49)
+}
 .header{
     display:flex;
     align-items: center;
-    background-color: rgb(30, 30, 30);
+    justify-content: space-between;
+    width:100%;
+    max-width: 775px;
+    max-height: 65px;
     color:white;
-    border-bottom: 1px solid rgb(106, 106, 106);
+    padding-right: 8px;
+    border-radius: 10px;
+    position: fixed;    
+    z-index:100;
+    transition: width 0.2s ease;
+    transform: translateX(-50%);
+    left: 50%;
+}
+
+#logo{
+    font-size: 32px;
+    font-weight: bold;
+    padding-left:10px;
+    display: flex;
+    padding-bottom: 8px;
+    padding-left: 12px;
+    transition:  .2s ease;
+    
+}
+#logo:hover{
+    transform:scale(1.1)
+}
+
+a{
+    text-decoration: none;
+    color: inherit;
+}
+
+#links{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
     margin: 0;
-    padding: 8px;
+    padding: 0;
+    gap: 38px;
+    transition: opacity 0.3s ease;
+    opacity: 1;
+    pointer-events: auto;
+}
+
+#link-button{
+    background-color: white;
+    padding-right:30px;
+    padding-left: 30px;
+    display: flex;
+    align-items: center;
+}
+
+li{
+    user-select: none;
+}
+
+li:hover{
+    color: rgb(76, 76, 76);
 }
 
 .document{
@@ -28,17 +106,13 @@ body{
     gap: 13px;
     width: 100%;
     max-width: 900px;
-
 }
 
 .left-bar, .right-bar{
     display: flex;
     height: 200px;
-    background-color: rgb(20, 20, 20);
     border-radius: 24px;
-    box-shadow: 2px 2px 3px rgb(17, 17, 17), -2px -2px 3px rgb(17, 17, 17);
-    padding: 18px
-;
+    padding: 18px;
 }
 .left-bar{
     flex: 1;
@@ -47,28 +121,34 @@ body{
 }
 
 .right-bar{
+    display: flex;
+    flex-direction: column;
     flex: 3;
     max-width: 500px;
+
 }
 
 .left-content{
     display:flex;
     flex-direction: column;
+    justify-content: space-between;
     width:100%;
-
 }
 
 button{
-    background-color: rgb(49, 49, 49) ;
+    background-color: white ;
     border-radius: 12px;
     border:0px;
-    color: white;
+    color: rgb(0, 0, 0);
     padding:8px;
+    width: 100%;
     font-family: "IBM Plex Mono", monospace;
+    transition: 0.2s ease;
+    font-size: 13px;
 }
 
 button:hover{
-    background-color: rgb(96, 96, 96) ;
+    transform: scale(1.05);
 }
 
 .text-box{
@@ -76,15 +156,13 @@ button:hover{
     font-family: "IBM Plex Mono", monospace;
     border: 1px solid rgb(76, 76, 76);
     border-radius: 12px;
-    background-color: rgb(20, 20, 20);
     width:100%;
     height:auto;
     color:white;
     overflow:auto;
-    overflow: hidden;
     resize:none;
     font-size: 14px;
-    min-height: 175px;
+    min-height: 150px;
 }
 
 .text-box::placeholder{
@@ -95,6 +173,25 @@ button:hover{
 .text-box:focus{
     border: 2px solid rgb(76, 76, 76);
     outline: none;
+}
+
+.left-text-box{
+    flex:1;
+    font-family: "IBM Plex Mono", monospace;
+    border: 1px solid rgb(76, 76, 76);
+    border-radius: 12px;
+    width:100%;
+    max-height: 50px;
+    overflow:auto;
+    overflow: hidden;
+    resize:none;
+    font-size: 14px;
+}
+
+.left.text-box::placeholder{
+    font-family: "IBM Plex Mono", monospace;
+    color: rgb(70, 70, 70);
+    font-size: 14px;
 }
 .input{
     display: flex;
@@ -108,9 +205,7 @@ button:hover{
     display: flex;
     height: 175px;
     width: 98%;
-    background-color: rgb(20, 20, 20);
     border-radius: 24px;
-    box-shadow: 2px 2px 3px rgb(17, 17, 17), -2px -2px 3px rgb(17, 17, 17);
     padding: 18px;
     padding-bottom: 24px;
     flex-direction: column;
@@ -126,4 +221,74 @@ button:hover{
     gap: 20px;
     justify-content: center;
     padding-top:100px;
+}
+
+.range{
+    display: flex;
+    flex-direction: column;
+}
+#range{
+    display: flex;
+    flex-direction: column;
+    width:100%
+}
+
+.left-button{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    padding-top:12px;
+    width:100%
+}
+
+.global-color-content{
+	background-color: rgb(20, 20, 20);
+	box-shadow: 2px 2px 5px rgb(0, 0, 0), -2px -2px 5px rgb(0, 0, 0);
+    transition: .2s ease;
+}
+
+.global-color-textbox{
+	background-color: rgb(20, 20, 20);
+	border: 1px solid rgb(76, 76, 76);
+    transition: .2s ease;
+    color: white;
+
+}
+
+#emoji{
+    overflow: auto;
+}
+
+.global-color-content.light-mode {
+    background-color: white;
+    box-shadow: 2px 2px 5px rgb(103, 103, 103), -2px -2px 5px rgb(103, 103, 103);
+}
+
+.global-color-textbox.light-mode {
+    background-color: white;
+    color: black;
+    border: 1px solid rgb(200, 200, 200);
+}
+
+.global-text{
+    color:white;
+}
+
+.left-text{
+    display:flex;
+    margin:0;
+    padding-bottom: 1px;
+}
+
+.global-text.light-mode{
+    color: rgb(20, 20, 20);
+}
+
+button.light-mode{
+    background-color: rgb(20, 20, 20);
+    color:white
+}
+
+#link-button.light-mode{
+    filter: invert(100%)
 }
